--- a/files/css/boostrap/bootstrap.css
+++ b/files/css/boostrap/bootstrap.css
@@ -169,6 +169,10 @@ main {
 
 
 /* Footer */
+footer {
+    margin-left: 0%;
+    margin-right: 0%;
+}
 
 /* links */
 
@@ -202,6 +206,28 @@ a:active {
     width: 100%;
 }
 
+
+/* Buttons */
+
+button {
+    background-color: rgba(255, 255, 255, 0.452);
+    border: 0.5px black groove;
+    padding: 5px;
+    margin: 5px;
+}
+
+button:hover,
+button:active {
+    background-color: rgb(41, 22, 216);
+    color: white;
+    border: 0.5px black groove;
+}
+
+button:clicked {
+    background-color: rgba(255, 255, 255, 0.452);
+    color: black;
+    border: 0.5px black groove;
+}
 
 /* images */
 
@@ -260,6 +286,8 @@ inform {
     padding: 5px;
     width: 100%;
     height: 100%;
+    margin-right: 0%;
+    margin-left: 0%;
 }
 
 .inform_button {
