--- a/files/css/assets/table_of_contents.css
+++ b/files/css/assets/table_of_contents.css
@@ -7,12 +7,12 @@
 
 #table_of_contents {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 128px;
     left: -52%;
     /* left: 0%; */
     width: 30%;
-    height: 82.9%;
+    height: 100%;
     padding-left: 12px;
     background-color: rgb(108, 108, 108);
 }
@@ -113,6 +113,12 @@
     border-style: outset;
     border-color: black;
     border-width: 2px;
+}
+
+.table_close_button {
+    position: absolute;
+    right: 5%;
+    top: 1%;
 }
 
 .table_button:hover {
