--- a/files/css/boostrap/boostrap_dark.css
+++ b/files/css/boostrap/boostrap_dark.css
@@ -157,6 +157,7 @@ main {
 
 /* Footer */
 footer {
+    padding-top: 20px;
     margin-left: 0%;
     margin-right: 0%;
 }
@@ -298,4 +299,17 @@ inform {
     background-color: rgb(22, 216, 216);
     color: rgb(0, 0, 0);
     border: 0.5px black groove;
+}
+
+/* copyright */
+
+copyright,
+#copyright_zone,
+.copyright {
+    width: 100%;
+    color: gold;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    font-weight: bold;
 }
