--- a/files/css/boostrap/bootstrap.css
+++ b/files/css/boostrap/bootstrap.css
@@ -170,6 +170,7 @@ main {
 
 /* Footer */
 footer {
+    padding-top: 20px;
     margin-left: 0%;
     margin-right: 0%;
 }
@@ -310,4 +311,17 @@ inform {
     background-color: rgba(255, 255, 255, 0.452);
     color: black;
     border: 0.5px black groove;
+}
+
+/* copyright */
+
+copyright,
+#copyright_zone,
+.copyright {
+    width: 100%;
+    color: darkblue;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    font-weight: bold;
 }
