--- a/files/css/stylesheet.css
+++ b/files/css/stylesheet.css
@@ -1,31 +1,35 @@
-.keyFromKeyboard{
+/* .keyFromKeyboard {
     width: auto;
     height: 50px;
 }
-.captionSubTitle, .captionTitle{
+
+.captionSubTitle,
+.captionTitle {
     font-weight: bold;
 }
-.captionTitle{
+
+.captionTitle {
     text-decoration: underline;
     text-align: center;
 }
-.hiddenCell{
-    color:transparent;
+
+.hiddenCell {
+    color: transparent;
 }
 
-.A_W_E_H1{
+.A_W_E_H1 {
     font-size: large;
     font-weight: bold;
     text-decoration: underline 3px black;
 
 }
 
-
-.System_container{
+.System_container {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
 }
-.System_and_image{
+
+.System_and_image {
     border: 1px black groove;
     border-radius: 3px;
     margin: 3px;
@@ -34,33 +38,39 @@
     padding: 4px;
     color: black;
 }
-.The_image_of_the_system{
-    border:none;
+
+.The_image_of_the_system {
+    border: none;
     width: 100px;
     height: 100px;
 }
 
-.WE_Link_container,.Discord_Link_container{
+.WE_Link_container,
+.Discord_Link_container {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
 }
-.image_WE_Link_Container_child,.image_Discord_Link_Container_child{
+
+.image_WE_Link_Container_child,
+.image_Discord_Link_Container_child {
     width: 50px;
     height: 50px;
     border: none;
 }
 
-.image_WE_Link_Container_child:hover{
+.image_WE_Link_Container_child:hover {
     transform: translateY(5px);
 }
 
-#The_hidden_Buttons{
+#The_hidden_Buttons {
     display: none;
 }
-.image_hosts{
+
+.image_hosts {
     width: 40px;
 }
-.image_credits{
+
+.image_credits {
     height: 40px;
     width: auto;
 }
@@ -81,7 +91,12 @@ label {
     overflow: hidden;
 }
 
-.auth_line_wrap{
+.auth_line_wrap {
     display: flex;
     flex-wrap: wrap;
+} */
+
+.img_icon {
+    width: 40px;
+    height: 40px;
 }
