--- a/files/css/boostrap/boostrap_dark.css
+++ b/files/css/boostrap/boostrap_dark.css
@@ -270,13 +270,17 @@ Contents {
 }
 
 inform {
+    display: block;
     background-color: rgb(238, 255, 0);
     border: 0.5px rgb(238, 255, 0) groove;
     padding: 5px;
+    padding-left: 10px;
     width: 100%;
     height: 100%;
+    margin-left: -1%;
     margin-right: 0%;
-    margin-left: 0%;
+    margin-top: 20px;
+    top: 5%;
 }
 
 .inform_button {
