--- a/files/css/fontsheets/emojy_b_n_w_font.css
+++ b/files/css/fontsheets/emojy_b_n_w_font.css
@@ -20,3 +20,9 @@
 .emoji_b_n_w {
     font-family: 'GikoDotEmoji';
 }
+
+.emoji_b_n_w:hover {
+    background-color: rgba(255, 217, 0, 0.39);
+    text-decoration: underline;
+    font-style: italic;
+}
