--- a/files/css/fontsheets/emojy_general_use_font.css
+++ b/files/css/fontsheets/emojy_general_use_font.css
@@ -20,3 +20,9 @@
 .emoji_g_u {
     font-family: 'emoji_general_use';
 }
+
+.emoji_g_u:hover {
+    background-color: rgba(255, 217, 0, 0.39);
+    text-decoration: underline;
+    font-style: italic;
+}
