--- a/files/css/fontsheets/emojy_space_font.css
+++ b/files/css/fontsheets/emojy_space_font.css
@@ -17,6 +17,12 @@
     font-style: normal;
 }
 
-.emoji_b_n_w {
+.emoji_space {
     font-family: 'GikoDotEmoji';
+}
+
+.emoji_space:hover {
+    background-color: rgba(255, 217, 0, 0.39);
+    text-decoration: underline;
+    font-style: italic;
 }
