--- a/files/css/story.css
+++ b/files/css/story.css
@@ -24,7 +24,16 @@ article p {
     word-wrap: normal;
 }
 
+.image_emoji {
+    height: 50px;
+    width: 50px;
+}
 
+.image_emoji:hover {
+    background-color: rgba(255, 217, 0, 0.39);
+    text-decoration: underline;
+    font-style: italic;
+}
 
 .image_body {
     height: 200px;
