--- a/files/css/boostrap/bootstrap.css
+++ b/files/css/boostrap/bootstrap.css
@@ -329,3 +329,19 @@ copyright,
     font-style: italic;
     font-weight: bold;
 }
+
+/* custom tables */
+table {
+    border: 1px black groove;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    font-size: 20px;
+}
+
+td,
+th {
+    border: 1px black groove;
+}
