--- a/files/css/assets/table_of_contents.css
+++ b/files/css/assets/table_of_contents.css
@@ -15,6 +15,7 @@
     height: 100%;
     padding-left: 12px;
     background-color: rgb(108, 108, 108);
+    z-index: 2;
 }
 
 #table_of_contents:hover,
