--- a/files/css/boostrap/bootstrap.css
+++ b/files/css/boostrap/bootstrap.css
@@ -82,6 +82,7 @@ header {
     position: fixed;
     top: 0px;
     left: 0px;
+    z-index: 3;
     width: 100%;
     padding-top: 12px;
     padding-bottom: 12px;
