--- a/files/css/powerpoint.css
+++ b/files/css/powerpoint.css
@@ -29,8 +29,9 @@ main iframe {
     font-weight: 300;
     height: max-content;
     width: 100%;
+    height: 84%;
     position: absolute;
-    top: 0;
+    top: 129px;
     left: 0;
     z-index: 1;
     display: flex;
