[FIXED] the error box

--- a/files/css/try_me.css
+++ b/files/css/try_me.css
@@ -25,3 +25,8 @@
     /* justify-content: center; */
     /* align-items: center; */
 }
+
+#appology_message {
+    width: 100%;
+    height: 100%;
+}
