--- a/files/css/assets/win_95_message_box.css
+++ b/files/css/assets/win_95_message_box.css
@@ -2,7 +2,7 @@
 ** EPITECH PROJECT, 2022
 ** space-track-home (Workspace)
 ** File description:
-** stylesheet.css
+** win_95_message_box.css
 */
 
 .my_body {
@@ -16,7 +16,7 @@
     border-width: 1px;
     border-color: #FFFFFF #808080 #808080 #FFFFFF;
     border-style: solid;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -139,8 +139,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 100%;
-    height: 100%;
+    width: inherit;
+    height: inherit;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -159,4 +159,12 @@
     font-size: 11px;
     margin: 0px;
     color: #000000;
+    word-wrap: break-word;
+    width: inherit;
+    height: inherit;
+}
+
+.win_body {
+    width: inherit;
+    height: inherit;
 }
